# penn-mobile

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  Procfile  README.md  manage.py  setup.cfg
.circleci/: config.yml
backend/: .env  Dockerfile  Pipfile  demo_games.py  dump.rdb  flake.nix  manage.py  pyproject.toml  setup.cfg
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/dining/: -- SQLite.sql  admin.py  api_wrapper.py  models.py  serializers.py  urls.py  views.py
backend/dining/data/: dining_images.csv  dining_venues.csv
backend/dining/migrations/: 0001_initial.py  0002_diningitem_diningstation_diningmenu.py  0003_venue_name.py  0004_remove_diningtransaction_profile_and_more.py  0005_diningitem_allergens_diningitem_nutrition_info_and_more.py  0006_remove_diningmenu_stations_and_more.py  0007_diningitem_allergen_booleans.py
backend/dining/utils/: menu_view_cache.py
backend/games/: admin.py  generator.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/games/migrations/: 0001_initial.py  0002_game_freqs.py  0003_alter_leaderboardentry_options_and_more.py
backend/gsr_booking/: admin.py  api_wrapper.py  group_logic.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/gsr_booking/data/: gsr_data.csv
backend/healthcheck/: apps.py  urls.py  views.py
backend/laundry/: admin.py  api_wrapper.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/legacy/: admin.py  apps.py  models.py
backend/market/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/marketplace/: admin.py  models.py  serializers.py  urls.py  views.py
backend/penndata/: admin.py  analytics.py  apps.py  models.py  serializers.py  types.py  urls.py  views.py
backend/pennmobile/: __init__.py  admin.py  analytics.py  celery.py  test_runner.py  urls.py  wsgi.py
backend/portal/: admin.py  logic.py  models.py  permissions.py  serializers.py  types.py  urls.py  views.py
backend/studentlife/: dbrouters.py  urls.py
backend/sublet/: admin.py  apps.py  models.py  permissions.py  serializers.py  types.py  urls.py  views.py
backend/subletting/: admin.py  apps.py  models.py  urls.py
backend/tests/: test_polls.py
backend/user/: admin.py  models.py  notifications.py  serializers.py  types.py  urls.py  views.py
backend/utils/: cache.py  email.py  errors.py  r_request.py  types.py
backend/wrapped/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
(+561 files in other folders)
