[project]
name = "penn-mobile-backend"
version = "2025.2.4"
description = "Backend for Penn Mobile"
requires-python = "==3.11"
dependencies = [
    "beautifulsoup4",
    "dj-database-url",
    "djangorestframework",
    "pandas",
    "html5lib",
    "psycopg2",
    "sentry-sdk",
    "django == 5.0.2",
    "django-cors-headers",
    "pyyaml",
    "uritemplate",
    #"uwsgi",
    "django-filter",
    "django-labs-accounts",
    "django-debug-toolbar",
    "django-runtime-options",
    "django-storages",
    "django-phonenumber-field[phonenumberslite]",
    "pillow",
    "boto3",
    "apns2",
    "numpy",
    "celery",
    "django-redis",
    "redis",
    "python-dateutil",
    "selenium",
    "webdriver-manager",
    #"pre-commit",
    "alt-profanity-check",
    "inflection",
    "firebase-admin",
]

[tool.black]
line-length = 100
