[project]
name = ""
version = "0.0.1"
requires-python = "==3.11.4"
dependencies = [
    "beautifulsoup4==4.12.3",
    "dj-database-url==2.3.0",
    "djangorestframework==3.15.2",
    "pandas==2.2.3",
    "html5lib==1.1",
    "psycopg2-binary==2.9.10",
    "sentry-sdk==2.18.0",
    "django==5.0.2",
    "django-cors-headers==4.6.0",
    "pyyaml==6.0.2",
    "uritemplate==4.1.1",
    "uwsgi==2.0.28",
    "django-filter==24.3",
    "django-labs-accounts==1.0.3",
    "django-debug-toolbar==4.4.6",
    "django-runtime-options==0.1.3",
    "django-storages==1.14.4",
    "django-phonenumber-field[phonenumberslite]==8.0.0",
    "pillow==11.0.0",
    "boto3==1.35.58",
    "apns2==0.7.1",
    "numpy==2.1.3",
    "celery==5.4.0",
    "django-redis==5.4.0",
    "redis==5.2.0",
    "python-dateutil==2.9.0.post0",
    "selenium==4.26.1",
    "webdriver-manager==4.0.2",
    "pre-commit==4.0.1",
    "alt-profanity-check==1.5.2",
    "inflection==0.5.1",
    "firebase-admin==6.6.0",
    "cryptography==43.0.3" # not used directly, but later versions are incompatible with GLIBC of our Docker image
]

[tool.black]
line-length = 100

[dependency-groups]
dev = [
    "black==24.4.0",
    "unittest-xml-reporting==3.2.0",
    "flake8==6.1.0",
    "flake8-isort==6.1.0",
    "flake8-quotes==3.3.2",
    "django-extensions==3.2.3",
    "flake8-absolute-import==1.0.0.2",
    "rope==1.13.0",
    "pytest==8.3.3",
    "tblib==3.0.0",
    "coverage==7.6.4",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
